--- a/css/style.css
+++ b/css/style.css
@@ -3,16 +3,14 @@ body, ul, ol, li, p, h1, h2, h3, h4, h5, h6, form, table, td, dl, dt, dd, img, d
   margin: 0; }
 
 body {
-  font-family: "Microsoft YaHei", tahoma, arial, 'Hiragino Sans GB', '\5b8b\4f53', sans-serif; }
+  font-family: "Microsoft YaHei", tahoma, arial, 'Hiragino Sans GB', '\5b8b\4f53', sans-serif;
+  background-color: #f5f5f5; }
 
 li {
   list-style: none; }
 
 a {
   text-decoration: none; }
-
-.clearfix {
-  clear: both; }
 
 .header {
   width: 100%;
@@ -28,12 +26,11 @@ a {
     color: white;
     margin: 15px auto;
     font-weight: normal; }
-  .header span.download {
-    display: block;
+  .header div.download {
     width: 100%;
     font-size: 0;
     margin-top: 25px; }
-    .header span.download a {
+    .header div.download a {
       display: inline-block;
       padding: 12px 20px;
       margin: 0 10px;
@@ -42,13 +39,12 @@ a {
       border: 1px solid rgba(255, 255, 255, 0.2);
       border-radius: 35px;
       font-size: 16px; }
-      .header span.download a:hover {
+      .header div.download a:hover {
         background: rgba(255, 255, 255, 0.2);
         transition: 1s; }
 
 .main-box {
-  width: 100%;
-  background: #f5f5f5; }
+  width: 100%; }
 
 .main {
   width: 70%;
@@ -108,7 +104,7 @@ a {
     height: 400px; }
     .header h1 {
       font-size: 52px; }
-    .header span.download a {
+    .header div.download a {
       padding: 10px 15px; } }
 @media screen and (max-width: 560px) {
   .header {
@@ -119,7 +115,7 @@ a {
       letter-spacing: 1px; }
     .header h2 {
       font-size: 18px; }
-    .header span.download a {
+    .header div.download a {
       padding: 8px 10px;
       font-size: 14px; }
 
@@ -145,9 +141,9 @@ a {
     .header h2 {
       font-size: 16px;
       margin: 5px auto; }
-    .header span.download {
+    .header div.download {
       margin-top: 15px; }
-      .header span.download a {
+      .header div.download a {
         padding: 5px 8px;
         font-size: 12px;
         margin: auto 5px; }
@@ -174,7 +170,7 @@ a {
       font-size: 12px; } }
 @media screen and (max-width: 375px) {
   .header {
-    height: 200px; }
+    height: 250px; }
     .header h1 {
       font-size: 28px;
       padding-top: 40px;
@@ -182,12 +178,17 @@ a {
     .header h2 {
       font-size: 16px;
       margin: 5px auto; }
-    .header span.download {
-      margin-top: 15px; }
-      .header span.download a {
-        padding: 5px 8px;
+    .header div.download {
+      width: 132px;
+      padding-top: 5px;
+      text-align: center;
+      margin: 0 auto; }
+      .header div.download a {
+        display: block;
+        padding: 6px 15px;
+        width: 100px;
         font-size: 12px;
-        margin: auto 5px; }
+        margin: 8px auto; }
 
   .main {
     width: 85%; }
@@ -209,5 +210,8 @@ a {
     .footer a {
       line-height: 40px;
       font-size: 12px; } }
+@media screen and (max-width: 300px) {
+  body {
+    min-width: 300px; } }
 
 /*# sourceMappingURL=style.css.map */
