--- a/css/style.scss
+++ b/css/style.scss
@@ -6,6 +6,7 @@ body, ul, ol, li, p, h1, h2, h3, h4, h5, h6, form, table, td, dl, dt, dd, img, d
 
 body {
   font-family: "Microsoft YaHei", tahoma, arial, 'Hiragino Sans GB', '\5b8b\4f53', sans-serif;
+  background-color: #f5f5f5;
 }
 
 li {
@@ -14,10 +15,6 @@ li {
 
 a {
   text-decoration: none;
-}
-
-.clearfix {
-  clear: both;
 }
 
 .header {
@@ -37,8 +34,7 @@ a {
     font-weight: normal;
 
   }
-  span.download {
-    display: block;
+  div.download {
     width: 100%;
     font-size: 0;
     margin-top: 25px;
@@ -63,12 +59,10 @@ a {
 
 .main-box {
   width: 100%;
-  background: #f5f5f5;
 }
 
 .main {
   width: 70%;
-  //height: 1200px;
   margin: 0 auto;
   section {
     h3 {
@@ -99,14 +93,7 @@ a {
       }
     }
   }
-  section.method {
-    //height: 420px;
 
-  }
-  section.settings {
-    //height: 500px;
-
-  }
 }
 
 .footer {
@@ -155,7 +142,7 @@ a {
     h1 {
       font-size: 52px;
     }
-    span.download a {
+    div.download a {
       padding: 10px 15px;
     }
   }
@@ -174,7 +161,7 @@ a {
       font-size: 18px;
     }
 
-    span.download a {
+    div.download a {
       padding: 8px 10px;
       font-size: 14px;
     }
@@ -214,7 +201,7 @@ a {
       margin: 5px auto;
     }
 
-    span.download {
+    div.download {
       margin-top: 15px;
       a {
         padding: 5px 8px;
@@ -257,7 +244,7 @@ a {
 //iphone6
 @media screen and(max-width: 375px) {
   .header {
-    height: 200px;
+    height: 250px;
     h1 {
       font-size: 28px;
       padding-top: 40px;
@@ -268,13 +255,17 @@ a {
       margin: 5px auto;
     }
 
-    span.download {
-      margin-top: 15px;
+    div.download {
+      width: 132px;
+      padding-top: 5px;
+      text-align: center;
+      margin: 0 auto;
       a {
-        //display: block;
-        padding: 5px 8px;
+        display: block;
+        padding: 6px 15px;
+        width: 100px;
         font-size: 12px;
-        margin: auto 5px;
+        margin: 8px auto;
       }
     }
   }
@@ -307,4 +298,9 @@ a {
     }
   }
 
+}
+@media screen and(max-width: 300px) {
+  body{
+    min-width: 300px;
+  }
 }
